[gd_scene load_steps=9 format=3 uid="uid://d2n8g4ajdqv6k"]

[ext_resource type="Script" path="res://scripts/stroke_editor.gd" id="1_tr0kt"]
[ext_resource type="FontFile" uid="uid://kjcvhktflru" path="res://fonts/NotoSansJP-Bold.ttf" id="2_4sacs"]
[ext_resource type="PackedScene" uid="uid://befgeh4xinnpg" path="res://scenes/stroke_point.tscn" id="2_243nl"]
[ext_resource type="PackedScene" uid="uid://cn7t4kaei5i0n" path="res://scenes/stroke_control.tscn" id="3_e7qni"]
[ext_resource type="PackedScene" uid="uid://clmr7m46k41xh" path="res://scenes/stroke_control_in_out.tscn" id="4_ogsam"]
[ext_resource type="Script" path="res://scripts/stroke_tree_view.gd" id="6_uldwi"]

[sub_resource type="Curve2D" id="Curve2D_qv18v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jp250"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_tr0kt")
stroke_point_scene = ExtResource("2_243nl")
stroke_control_scene = ExtResource("3_e7qni")
stroke_control_in_out_scene = ExtResource("4_ogsam")

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -105.0
offset_top = 13.0
offset_right = -16.0
offset_bottom = 36.0
grow_horizontal = 0
text = "version: 2.0"

[node name="LoadFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="SaveFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(600, 400)
ok_button_text = "Save"
access = 2
use_native_dialog = true

[node name="CharacterLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 700)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -507.0
offset_right = 350.0
offset_bottom = 507.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_4sacs")
theme_override_font_sizes/font_size = 1000
text = "„ÅÇ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PathContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="StrokeLine" type="Line2D" parent="PathContainer"]
unique_name_in_owner = true
width = 3.0
default_color = Color(0, 0, 0, 1)

[node name="StrokePath" type="Path2D" parent="PathContainer"]
unique_name_in_owner = true
curve = SubResource("Curve2D_qv18v")

[node name="ControlsContainer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PointsContainer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="UI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Menu"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VSeparator" type="VSeparator" parent="UI/Menu/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_jp250")

[node name="FileMenuButton" type="MenuButton" parent="UI/Menu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "File"
item_count = 2
popup/item_0/text = "Load"
popup/item_0/id = 0
popup/item_1/text = "Save"
popup/item_1/id = 1
popup/item_1/disabled = true

[node name="EditMenuButton" type="MenuButton" parent="UI/Menu/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Edit"
item_count = 12
popup/item_0/text = "Align left"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "Align right"
popup/item_1/id = 1
popup/item_1/disabled = true
popup/item_2/text = "Align top"
popup/item_2/id = 2
popup/item_2/disabled = true
popup/item_3/text = "Align bottom"
popup/item_3/id = 3
popup/item_3/disabled = true
popup/item_4/text = ""
popup/item_4/id = 4
popup/item_4/separator = true
popup/item_5/text = "Distribute Horizontally"
popup/item_5/id = 5
popup/item_5/disabled = true
popup/item_6/text = "Distribute Vertically"
popup/item_6/id = 6
popup/item_6/disabled = true
popup/item_7/text = ""
popup/item_7/id = 7
popup/item_7/separator = true
popup/item_8/text = "Move stroke up (order) "
popup/item_8/id = 8
popup/item_8/disabled = true
popup/item_9/text = "Move stroke down (order)"
popup/item_9/id = 9
popup/item_9/disabled = true
popup/item_10/text = ""
popup/item_10/id = 10
popup/item_10/separator = true
popup/item_11/text = "Delete all strokes"
popup/item_11/id = 11
popup/item_11/disabled = true

[node name="TraceControls" type="HBoxContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="CharacterPanelContainer" type="PanelContainer" parent="UI/TraceControls"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TraceControls/CharacterPanelContainer"]
layout_mode = 2

[node name="CharactersTitleLabel" type="Label" parent="UI/TraceControls/CharacterPanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Characters"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterList" type="ItemList" parent="UI/TraceControls/CharacterPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_font_sizes/font_size = 36
select_mode = 1
same_column_width = true
fixed_column_width = 280
icon_mode = 0
fixed_icon_size = Vector2i(10, 0)

[node name="StrokesPanelContainer" type="PanelContainer" parent="UI/TraceControls"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TraceControls/StrokesPanelContainer"]
layout_mode = 2
mouse_filter = 0

[node name="PreviewButton" type="CheckButton" parent="UI/TraceControls/StrokesPanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
disabled = true
text = "Preview"

[node name="Label" type="Label" parent="UI/TraceControls/StrokesPanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_font_sizes/font_size = 24
text = "Strokes"
horizontal_alignment = 1

[node name="StrokeTree" type="Tree" parent="UI/TraceControls/StrokesPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
scroll_horizontal_enabled = false
script = ExtResource("6_uldwi")

[node name="AddStrokeButton" type="Button" parent="UI/TraceControls/StrokesPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "add stroke"

[connection signal="item_activated" from="UI/TraceControls/CharacterPanelContainer/VBoxContainer/CharacterList" to="." method="_on_item_list_item_activated"]
[connection signal="item_clicked" from="UI/TraceControls/CharacterPanelContainer/VBoxContainer/CharacterList" to="." method="_on_item_list_item_clicked"]
[connection signal="toggled" from="UI/TraceControls/StrokesPanelContainer/VBoxContainer/PreviewButton" to="." method="_on_preview_button_toggled"]
[connection signal="item_activated" from="UI/TraceControls/StrokesPanelContainer/VBoxContainer/StrokeTree" to="UI/TraceControls/StrokesPanelContainer/VBoxContainer/StrokeTree" method="_on_tree_item_activated"]
[connection signal="pressed" from="UI/TraceControls/StrokesPanelContainer/VBoxContainer/AddStrokeButton" to="." method="_on_add_stroke_button_pressed"]
